Fix overflow text in #profile-details

--- a/css/profile.css
+++ b/css/profile.css
@@ -52,8 +52,12 @@
 	top: 0;
 	position: absolute;
 	background: rgba(0,0,0,0.1);
-	height: 100%;
-	overflow: visible;
+	height: 95%;
+	overflow: hidden;
+}
+
+#profile-details:hover {
+    overflow: auto;
 }
 
 .elgg-main {
